# non-dirty_mcp-server-restart

./: README.md  development_checklist.txt  pyproject.toml  pyproject_old.toml  server.py
src/mcp_server_restart/: server.py
tests/: test_server.py
