[project]
name = "claude-restart-server"
version = "0.1.0"
description = "MCP server for restarting Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
