[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-restart"
version = "0.1.0"
description = "MCP server for restarting Claude Desktop"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Codeium", email = "support@codeium.com" },
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
mcp-server-restart = "mcp_server_restart.server:main"
