[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-restart"
version = "0.1.2"
description = "MCP server for restarting Claude Desktop"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Matthew Smith", email = "non_dirty@me.com" },
]
license = "MIT"
keywords = ["mcp", "mcp-server", "claude", "restart", "model-context-protocol", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Framework :: Model Context Protocol",
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/non-dirty/mcp-server-restart"
Repository = "https://github.com/non-dirty/mcp-server-restart.git"
Documentation = "https://github.com/non-dirty/mcp-server-restart#readme"
Issues = "https://github.com/non-dirty/mcp-server-restart/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
mcp-server-restart = "mcp_server_restart.server:run_server"
